failure-section-updated

--- a/index.html
+++ b/index.html
@@ -35,17 +35,26 @@
       <div id="failure-img">
         <img src="images/person.png" alt="person image" />
       </div>
-      <div>
-      <h1 class="section-title" id="section-heading">
-        My failures of <br />
-        previous year
-      </h1>
-      <p class="section-title" id="section-details">
-        ontrary to popular belief, Lorem Ipsum is not <br> simply random text. It has
-        roots in a piece of <br> classical Latin literature from 45 BC, making it
-        over <br> 2000 years old. Richard McClintock.
-      </p>
-    </div>
+      <div id="section-control">
+        <h1 class="section-title" id="section-heading">
+          My failures of <br />
+          previous year
+        </h1>
+        <p class="section-title" id="section-details">
+          Contrary to popular belief, Lorem Ipsum is not <br />
+          simply random text. It has roots in a piece of <br />
+          classical Latin literature from 45 BC, making it over <br />
+          2000 years old. Richard McClintock.
+        </p>
+
+        <div class="section-subtitle">
+          <p class="section-subtitle-text">Contrary to popular belief, is not simply.</p> 
+          <p class="section-subtitle-text">Contrary to popular belief.</p> 
+          <p class="section-subtitle-text">Contrary to popular , is not simply.</p> 
+          <p class="section-subtitle-text">Contrary to popular belief, is not simply</p> 
+          <p class="section-subtitle-text">Contrary to popular simply.</p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
