my-plan-section-added

--- a/index.html
+++ b/index.html
@@ -48,13 +48,59 @@
         </p>
 
         <div class="section-subtitle">
-          <p class="section-subtitle-text">Contrary to popular belief, is not simply.</p> 
-          <p class="section-subtitle-text">Contrary to popular belief.</p> 
-          <p class="section-subtitle-text">Contrary to popular , is not simply.</p> 
-          <p class="section-subtitle-text">Contrary to popular belief, is not simply</p> 
+          <p class="section-subtitle-text">
+            Contrary to popular belief, is not simply.
+          </p>
+          <p class="section-subtitle-text">Contrary to popular belief.</p>
+          <p class="section-subtitle-text">
+            Contrary to popular , is not simply.
+          </p>
+          <p class="section-subtitle-text">
+            Contrary to popular belief, is not simply
+          </p>
           <p class="section-subtitle-text">Contrary to popular simply.</p>
         </div>
       </div>
+    </section>
+
+    <section id="my-plan-container">
+      <h1 id="my-plan-title">My Plans</h1>
+      <div id="my-plan">
+
+        <div class="my-plan-box">
+          <img src="../images/icons/web.png">
+          <h2 class="my-plan-heading">Web Development</h2>        
+          <p class="center">I want to start</p>
+        </div>
+
+        <div class="my-plan-box">
+          <img src="../images/icons/js.png">
+          <h2 class="my-plan-heading">Javascript</h2>
+          <p class="center">I want to learn</p>
+        </div>
+
+        <div class="my-plan-box">
+          <img src="../images/icons/smoke.png">
+          <h2 class="my-plan-heading">Smoking Habit</h2>
+          <p class="center">I want to end</p>
+        </div>
+
+        <div class="my-plan-box">
+          <img src="../images/icons/ecom.png">
+          <h2 class="my-plan-heading">ecommerce</h2>
+          <p class="center">I want to develop</p>
+        </div>
+
+      </div>
+    </section>
+
+    <section id="gradient-container">
+      
+      <div id="gradient">
+        <img src="../images/watch.png">
+        <img src="../images/gradient1.png">
+      </div>
+      
     </section>
   </body>
 </html>
