--- a/index.html
+++ b/index.html
@@ -94,13 +94,47 @@
       </div>
     </section>
 
-    <section id="gradient-container">
-      
-      <div id="gradient">
-        <img src="../images/watch.png">
-        <img src="../images/gradient1.png">
-      </div>
-      
-    </section>
+<section id="gradient-img">
+  <div>
+
+ <h1 id="gradient-title">
+    Awlays keep a positive <br> 
+    mindset
+ </h1>
+ <button class="btn-watch">Call Now</button>
+
+  <div>
+    <p id="dot">.</p>
+  </div>
+
+</section>
+
+<footer>
+      <div id="footer">
+        <!-- <div> -->
+          <div id="future-container">
+            <h1 id="future">Future</h1>
+            <p id="future-text">There are many variations of passages of Lorem Ipsum <br>
+              available, but the majority have suffered alteration in some <br> 
+              form, by injected humour, or randomised words <br> <br>
+              Email : info@gmail.com <br> <br>
+             <span id="phone-no"> Phone : 01500 00 00 00 </span></p>
+          </div>
+          <div id="logo-img">
+          <div><img class="logo"  src="../images/icons/fb.png"></div>
+          <div><img class="logo"  src="../images/icons/twitter.png"></div>
+          <div><img class="logo"  src="../images/icons/youtube.png"></div>
+          </div>
+        <!-- </div> -->
+
+        <div id="right-side">
+          <h3 id="subscribe">Subscribe</h3>
+          <p id="email">Enter Your Email</p>
+          <button class="btn-subscribe">Subscribe</button>
+        </div>
+
+</div>
+</footer>
+
   </body>
 </html>
